--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,14 +8,14 @@ local:
 
   cloudinary:
   service: Cloudinary
-  folder: <%= Rails.env %>
-
+  url: <%= puts "CLOUDINARY_URL: #{ENV['CLOUDINARY_URL']}" %>; ENV['CLOUDINARY_URL'] %>
+  
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
 #   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
 #   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
+#   region: us-east-
 #   bucket: your_own_bucket-<%= Rails.env %>
 
 # Remember not to checkin your GCS keyfile to a repository
